# platy-zip

./: .gitignore  CMakeLists.txt  Makefile
include/: bitstream.h  file.h  hashmap.h  hashmap_base.h  huffman.h  list.h  map.h  prio_queue.h
src/: bitstream.c  file.c  hashmap.c  huffman.c  list.c  main.c  map.c  prio_queue.c
test/: test.c  test_bitstream.c  test_bitstream.h  test_huffman.h
